# pagos-proy

backend/: pyproject.toml
backend/django_project/: settings.py  urls.py
backend/pagos/: api.py  models.py  serializers.py  urls.py
backend/pagos/migrations/: 0001_initial.py  0002_initial.py
backend/users/: models.py  routers.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/public/: index.html  login.html  new-payment.html
frontend/src/js/: index.js  login.js  new-payment.js
